--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,6 +14,11 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-#           SHOW_DAYS_OF_WEEK: True
-#           SHOW_LANGUAGE: True
-#           SHOW_OS: True
+          SHOW_DAYS_OF_WEEK: True
+          SHOW_LANGUAGE: True
+          SHOW_OS: True
+          UPDATED_DATE_FORMAT: False
+          SHOW_PROFILE_VIEWS: False
+          SHOW_LANGUAGE_PER_REPO: False
+          SHOW_UPDATED_DATE: False
+          SHOW_LOC_CHART: False
