--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,3 +22,4 @@ jobs:
           SHOW_LANGUAGE_PER_REPO: False
           SHOW_UPDATED_DATE: False
           SHOW_LOC_CHART: False
+          SHOW_TOTAL_CODE_TIME: False
